# tims-stock-trendline

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml
1. The Beginning/: README.md  index.html
2. The SSE Revolution/: README.md  index.html
3. You should try LISTENing/: README.md  index.html
4. PG-Cache_Multi_client/: README.md  index.html
backend/: app.py  extensions.py  fixtures.py
migrations/versions/: d5e77344a0c4_initial_migration.py
